--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -32,8 +32,9 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+          git config --global --add safe.directory /github/workspace
           git add README.md
-          git commit -m "Automatically update README.md" || true
+          git commit -m "Update README.md" || true
 
       - name: Push changes
         uses: ad-m/github-push-action@v0.5.0
