--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -25,25 +25,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Create temp directory
-        run: |
-          mkdir temp
-          cp -R . temp
-
       - name: Run generateReadme.js
-        working-directory: ./temp
         run: node generateReadme.js
 
       - name: Commit changes
-        working-directory: ./temp
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add README.md
           git commit -m "Update README.md" || true
 
       - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
+        uses: ad-m/github-push-action@v0.5.0
         with:
-          branch: main
-          directory: ./temp
+          github_token: ${{ secrets.GITHUB_TOKEN }}
