--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git config --local --add safe.directory /github/workspace
+          git config --local --add safe.directory '*'
           git add README.md
           git commit -m "Update README.md" || true
 
