--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -36,6 +36,7 @@ jobs:
           git commit -m "Update README.md" || true
 
       - name: Push changes
-        run: git push origin main
+        run: |
+          git push origin main --follow-tags -c "http.extraheader=AUTHORIZATION: basic ${{ secrets.PERSONAL_ACCESS_TOKEN }}"
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
