--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Configure working directory permissions
         run: |
-          sudo chown -R ${{ github.actor }} /github/workspace
-          sudo chgrp -R ${{ github.actor }} /github/workspace
+          chown -R ${{ github.actor }} /github/workspace
+          chgrp -R ${{ github.actor }} /github/workspace
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
