--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14" # Changer la version de Node.js si nécessaire
+          node-version: 14 # Changer la version de Node.js si nécessaire
 
       - name: Install dependencies
         run: npm install
