--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: latest # Changer la version de Node.js si nécessaire
+          node-version: 14 # Changer la version de Node.js si nécessaire
 
       - name: Install dependencies
         run: npm install
